= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [nng-rs Unreleased] ==

=== Added ===

=== Changed ===

=== Deprecated ===

=== Removed ===

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.1] - 2019-12-07 ==

=== Fixed ===

* Made the `RecvFd` and `SendFd` readable instead of writable. (#45)

== [nng-rs v0.5.0] - 2019-06-20 ==

=== Added ===

* The `Socket::try_{send,recv}` and the `Socket::{dial,listen}_async` functions have been added. (#34)
* The `ffi-module` feature is now available, which allows retrieving the underlying nng-sys types. (#33)
* Added a `RawSocket` type that marks that the given socket is in "raw" mode. (#31)
* Added forwarder and reflector devices. (#32)
* The `Message` and `Header` types now implement `Write`.
* The `Message` type received several new functions to make its API similar to that of a `Vec<u8>` or `VecDeque<u8>`.
* Implemented additional common traits on types: (#18, #23)
	** All options: `Clone`, `Copy`, `Debug`, `Display`, `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Aio`: `Eq`, `Hash`, `PartialEq`
	** `Context`: `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Dialer`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Error`: `Hash`
	** `Header`: `Default`
	** `Listener`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Message`: `Default`, `FromIterator` for both values and references of `u8`
	** `Pipe`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `PipeEvent`: `Debug`, `Copy`, `Clone`, `Eq`, `PartialEq`, `Hash`
	** `Protocol`: `Ord`, `PartialOrd`, `Eq`, `PartialEq`, `Hash`
	** `Socket`: `Hash`, `Ord`, `PartialOrd`